# mama

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
mama/: .mama.config.yml  __init__.py  __main__.py  _version.py  config.py  main.py
mama/core/: chat_interface.py  chat_manager.py  chat_service.py
mama/interface/: cli_interface.py  gui_interface.py  web_interface.py
mama/model/: litellm_model.py  mock_ai_backend.py  openai_backend.py
